Change of Name to Nii Abbey

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <td>92</td>
       </tr>
       <tr>
-        <td>Sam Brown</td>
+        <td>Nii Abbey</td>
         <td>78</td>
       </tr>
       <tr>
