--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jomacs Training Academy - Welcome</title>
+  <title>Jomacs Academy - Welcome</title>
   <style>
     body {
         font-family: 'Verdana', sans-serif;
@@ -98,7 +98,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to JOMACS</h1>
+  <h1>Welcome to Jomacs Academy</h1>
   <h2>Student Portal</h2>
 
   <div class="buttons-container">
@@ -125,7 +125,7 @@
         <td>92</td>
       </tr>
       <tr>
-        <td>Nii Abbey</td>
+        <td>Sam Brown</td>
         <td>78</td>
       </tr>
       <tr>
