Changed highest score to my name

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <td>88</td>
       </tr>
       <tr>
-        <td>Michael Green</td>
+        <td>Sylvester Arko-Otabil</td>
         <td>95</td>
       </tr>
     </tbody>
