Changed of name to Ignatius Addo

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <td>85</td>
       </tr>
       <tr>
-        <td>Jane Smith</td>
+        <td>Ignatius Addo</td>
         <td>92</td>
       </tr>
       <tr>
